<resources>
    <string name="app_name">UQ - APP</string>
    <string name="text_start_game">Start Game</string>
    <string name="welcome_message">Welcome to one and only</string>
    <string name="submit">Submit</string>
    <string name="title_username_input">Please enter your name below</string>
    <string name="fill_field_message">Please fill the field!</string>
    <string name="pick_category_message">Welcome %s. Please pick a category.</string>
    <string name="categories">Categories</string>
    <string name="history_category_name">History</string>
    <string name="sport_category_name">Sport</string>
    <string name="art_category_name">Art</string>
    <string name="science_category_name">Science</string>
    <string name="not_selected_error">No option selected</string>
    <string name="category_edittext">EditText</string>
    <string name="category_checkbox">CheckBox</string>
    <string name="category_radioButton">Radio Button</string>
    <string name="empty_string" />
    <string name="right_answers" formatted="false">Question %d was wrong.\nRight answer as follows: %s \n</string>
    <string name="result_text">You have %d correct answer.</string>
    <string name="full_success_message" formatted="false">\nYou have made every question correct!</string>
    <string name="start_new_quiz">Start New Quiz!</string>
    <string name="warning_title">Warning</string>
    <string name="warning_message">If you go back all of your process will be deleted!</string>
    <string name="accept_text">Accept</string>
    <string name="cancel_text">Cancel</string>
    <string name="show_result_button_text">Show My Result</string>
    <string name="show_result_message">You have finished the test\nClick below button to see your result!</string>
</resources>
