<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:layout_above="@+id/landing_large_title"
        android:layout_alignLeft="@+id/landing_large_title"
        android:layout_alignStart="@+id/landing_large_title"/>

    <TextView
        android:id="@+id/landing_large_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/to_name_section"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/main_distance_between_views"
        android:text="@string/app_name"
        android:textSize="@dimen/intro_page_largetext_size"/>

    <Button
        android:id="@+id/to_name_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:padding="@dimen/main_distance_between_views"
        android:text="@string/text_start_game"
        android:textColor="@drawable/button_text_color_selector"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/landing_large_title"
        android:layout_alignStart="@+id/landing_large_title"
        android:clickable="true"/>
</RelativeLayout>