<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/category_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_title_height"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:textSize="@dimen/regular_text_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/category_title"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <android.support.v7.widget.CardView
                android:id="@+id/category_sport"
                android:layout_width="@dimen/category_height_and_width"
                android:layout_height="@dimen/category_height_and_width"
                android:orientation="vertical"
                android:layout_margin="@dimen/main_distance_between_views">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:src="@drawable/football"
                    android:scaleType="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/sport_category_name"
                    android:gravity="center"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/category_history"
                android:layout_width="@dimen/category_height_and_width"
                android:layout_height="@dimen/category_height_and_width"
                android:orientation="vertical"
                android:layout_margin="@dimen/main_distance_between_views">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:src="@drawable/history"
                    android:scaleType="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/history_category_name"
                    android:gravity="center"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <android.support.v7.widget.CardView
                android:id="@+id/category_art"
                android:layout_width="@dimen/category_height_and_width"
                android:layout_height="@dimen/category_height_and_width"
                android:orientation="vertical"
                android:layout_margin="@dimen/main_distance_between_views">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:src="@drawable/art"
                    android:scaleType="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/art_category_name"
                    android:gravity="center"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/category_Science"
                android:layout_width="@dimen/category_height_and_width"
                android:layout_height="@dimen/category_height_and_width"
                android:orientation="vertical"
                android:layout_margin="@dimen/main_distance_between_views">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:src="@drawable/atomic"
                    android:scaleType="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/science_category_name"
                    android:gravity="center"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
